# offflix

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.toml  dist-workspace.toml
.cargo/: config.toml
src/: get_root.rs  image_downloader.rs  interface_cli.rs  interface_gui.rs  key_controls.rs  lib.rs  main.rs  media_player.rs  series_manager.rs
src/interface_gui/: ui_views.rs
