[package]
name = "offflix"
version = "0.1.0"
edition = "2021"

[dependencies]
libmpv-sirno = "2.0.2-fork.1"
keyboard_query = "0.1.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
indexmap = "1.7.0"
rand = "0.8.4"
eframe = "0.20.0"
egui_extras = {version = "0.20.0", features = ["image"]}
image = { version = "0.24", features = ["jpeg", "png"] }
image_search = { version = "0.4", default-feautures = false, features = ["hyper","blocking"] }