[package]
name = "offflix"
version = "1.0.6"
edition = "2021"
description = "A simple application to auto manage series on your local storage."
license = "MIT"
homepage = "https://github.com/Dr-42/offflix"
repository = "https://github.com/Dr-42/offflix"
keywords = ["series", "video", "player", "video-libray", "media-player"]

[dependencies]
libmpv-sirno = "2.0.2-fork.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
indexmap = "1.7.0"
rand = "0.8.4"
eframe = "0.20.0"
egui_extras = { version = "0.20.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
image_search = { git = "https://github.com/Dr-42/image_search", version = "0.4.3", features = ["hyper", "blocking"] }
directories = "5.0.1"
rfd = "0.14.1"
